--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .App { 
   margin:0;
   padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 3fr 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 5px;
 }
