--- a/src/Compo/surprise.css
+++ b/src/Compo/surprise.css
@@ -2,3 +2,10 @@
     grid-row-start: 2;
     grid-column-start: 3 span 1;
 }
+
+@media all and (max-device-width : 480px) 
+{
+    .suprise{
+        grid-row-start: 4;
+    }
+}
