--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,13 @@
   row-gap: 5px;
 }
 
-@media all and (max-device-width : 480px) 
+@media screen and (max-device-width : 500px) 
 {
- .app{
-   display: grid;
-   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-   row-gap: 5px;
+ .App{
+   display: flex;
+   flex-direction: column;
+   margin:0;
+  padding: 0;
  } 
 
 }
