--- a/src/Compo/fomulaire.css
+++ b/src/Compo/fomulaire.css
@@ -10,6 +10,13 @@ input {
     margin: .4rem;
 }
 
+@media screen and (max-device-width : 1000px)
+{
+    .carte1 {
+        grid-row-start: 2;
+    }
+}
+
 @media all and (max-device-width : 480px) 
 {
     .formulaire{
