--- a/src/Compo/surprise.css
+++ b/src/Compo/surprise.css
@@ -1,6 +1,22 @@
 .surprise{
-    grid-row-start: 2;
-    grid-column-start: 3 span 1;
+    margin: 0;
+    padding: 0;
+    grid-row-start: 3;
+    height: 250px;
+    width: 300px;
+    border-radius: 10px;
+    background-color: cornflowerblue;
+    box-shadow: 10px 5px 5px grey;
+    justify-content: center;
+    display: flex;
+    
+}
+
+@media screen and (max-device-width : 1000px)
+{
+    .surprise {
+        grid-row-start: 3;
+    }
 }
 
 @media all and (max-device-width : 480px) 
